fix: update security configuration and test suite